--- a/about.html
+++ b/about.html
@@ -3,14 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/styles.css" />
+    <meta
+      name="description"
+      content="front-end developer responsive projects"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <link rel="stylesheet" href="src/styles.css" />
+    <title>Projects by south african front-end developer</title>
   </head>
   <body>
     <!--navbar start-->
@@ -49,7 +53,7 @@
     <!--hero section start-->
 
     <div class="container hero-container">
-      <h1 style="font-size: 6rem">About me</h1>
+      <h1 id="about-heading">About me</h1>
       <h3 class="mb-4">Front-end developer from Johannesburg, South Africa</h3>
       <div class="about-paragraphs">
         <p class="text-center" style="font-size: 1.1rem">
@@ -65,24 +69,36 @@
       <div class="row d-flex mt-5">
         <div class="col-sm-4 mb-2">
           <div class="card border border-5 border-white rounded shadow">
-            <img src="./images/yoga.png" class="img-fluid" alt="..." />
+            <img
+              src="./images/yoga.png"
+              class="img-fluid"
+              alt="women doing a yoga pose on a yoga mat"
+            />
           </div>
         </div>
         <div class="col-sm-4 mb-2">
           <div class="card border border-5 border-white rounded shadow">
-            <img src="./images/weather.png" class="img-fluid" alt="..." />
+            <img
+              src="./images/weather.png"
+              class="img-fluid"
+              alt="weather forecast for a week in Lisbon"
+            />
           </div>
         </div>
         <div class="col-sm-4">
           <div class="card border border-5 border-white rounded shadow">
-            <img src="./images/yogurt.png" class="img-fluid" alt="..." />
+            <img
+              src="./images/yogurt.png"
+              class="img-fluid"
+              alt="yohurt in a glass wih blueberries"
+            />
           </div>
         </div>
       </div>
     </div>
 
     <div class="mt-5 mb-5" id="contact">
-      <h2 style="font-size: 3rem">📮 Contact me</h2>
+      <h4 style="font-size: 3rem">📮 Contact me</h4>
       <a
         href="mailto:tinsylee@gmail.com"
         class="email-link hover-color"
