--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/styles.css" />
+    <meta
+      name="description"
+      content="portfolio of web developer in south africa"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <link rel="stylesheet" href="src/styles.css" />
+    <title>Web development portfolio</title>
   </head>
   <body>
     <!--navbar start-->
@@ -50,10 +54,10 @@
     <!--hero section start-->
     <div class="container mb-5">
       <div class="container hero-container">
-        <h2>👋 Hi I am</h2>
-        <h1 class="fw-bold" style="font-size: 4rem; letter-spacing: 0.1em">
+        <h1 id="greeting">👋 Hi I am</h1>
+        <h2 class="fw-bold" style="letter-spacing: 0.1em" id="heading">
           Tintswalo Mabuza
-        </h1>
+        </h2>
         <h3>🇿🇦 Front-end developer, based in South Africa</h3>
         <div class="navigation-links d-flex gap-5 justify-content-center mt-5">
           <a
@@ -81,7 +85,7 @@
               <img
                 src="./images/yoga.png"
                 class="card border-0 img-fluid"
-                alt="..."
+                alt="women doing a yoga pose on a yoga mat"
               />
             </div>
           </div>
@@ -99,7 +103,7 @@
                   href="#"
                   class="btn p-3 text-white link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
                   id="launch-btn"
-                  >Launch Yoga App</a
+                  >Launch Yoga App Project</a
                 >
               </div>
             </div>
@@ -126,7 +130,7 @@
                   href="#"
                   class="btn p-3 text-white link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
                   id="launch-btn"
-                  >Launch Weather App</a
+                  >Launch Weather App Project</a
                 >
               </div>
             </div>
@@ -136,7 +140,7 @@
               <img
                 src="./images/weather.png"
                 class="card border-0 img-fluid"
-                alt="..."
+                alt="weather forecast for a week in Lisbon"
               />
             </div>
           </div>
@@ -153,7 +157,7 @@
               <img
                 src="./images/yogurt.png"
                 class="card border-0 img-fluid"
-                alt="..."
+                alt="yohurt in a glass wih blueberries"
               />
             </div>
           </div>
@@ -171,7 +175,7 @@
                   href="#"
                   class="btn p-3 text-white link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
                   id="launch-btn"
-                  >Launch Yogurt App</a
+                  >Launch Yogurt App Project</a
                 >
               </div>
             </div>
